added american options and euro put

--- a/trees/Binary_Trees_For_Options.ipynb
+++ b/trees/Binary_Trees_For_Options.ipynb
@@ -234,7 +234,62 @@
     "    p = (math.exp(r) - d)/(u - d)\n",
     "\n",
     "    root.future = math.exp(-r)*( p*f_u + (1-p)*f_d )\n",
-    "    \n"
+    "    \n",
+    "def setEuropeanPut(root,r,strike_price):\n",
+    "    depthList = BFS_DepthList(root)[::-1]\n",
+    "    leaves = depthList[0]\n",
+    "    trunk = depthList[1:-1]\n",
+    "    root = depthList[-1][0]\n",
+    "    \n",
+    "    for leaf in leaves:\n",
+    "        leaf.future = max(0,strike_price - leaf.price)\n",
+    "    for branches in trunk:\n",
+    "        for branch in branches:\n",
+    "            u = branch.left.price/branch.price\n",
+    "            f_u = branch.left.future\n",
+    "            d = branch.right.price/branch.price\n",
+    "            f_d = branch.right.future\n",
+    "            p = (math.exp(r) - d)/(u - d)\n",
+    "            \n",
+    "            branch.future = math.exp(-r)*( p*f_u + (1-p)*f_d )\n",
+    "    \n",
+    "    u = root.left.price/root.price\n",
+    "    f_u = root.left.future\n",
+    "    d = root.right.price/root.price\n",
+    "    f_d = root.right.future\n",
+    "    p = (math.exp(r) - d)/(u - d)\n",
+    "\n",
+    "    root.future = math.exp(-r)*( p*f_u + (1-p)*f_d )\n",
+    "    \n",
+    "\n",
+    "def setAmericanPut(root,r,strike_price):\n",
+    "    depthList = BFS_DepthList(root)[::-1]\n",
+    "    leaves = depthList[0]\n",
+    "    trunk = depthList[1:-1]\n",
+    "    root = depthList[-1][0]\n",
+    "    \n",
+    "    for leaf in leaves:\n",
+    "        leaf.future = max(0,strike_price - leaf.price)\n",
+    "    for branches in trunk:\n",
+    "        for branch in branches:\n",
+    "            u = branch.left.price/branch.price\n",
+    "            f_u = branch.left.future\n",
+    "            d = branch.right.price/branch.price\n",
+    "            f_d = branch.right.future\n",
+    "            p = (math.exp(r) - d)/(u - d)\n",
+    "            \n",
+    "            euro_fut = math.exp(-r)*( p*f_u + (1-p)*f_d )\n",
+    "            early_ex_fut = strike_price - branch.future\n",
+    "            \n",
+    "            branch.future = np.where(early_ex_fut > euro_fut,)\n",
+    "    \n",
+    "    u = root.left.price/root.price\n",
+    "    f_u = root.left.future\n",
+    "    d = root.right.price/root.price\n",
+    "    f_d = root.right.future\n",
+    "    p = (math.exp(r) - d)/(u - d)\n",
+    "\n",
+    "    root.future = math.exp(-r)*( p*f_u + (1-p)*f_d )"
    ]
   },
   {
