--- a/Black-Scholes-And_Friends/Linear_Black-Scholes-Merton.ipynb
+++ b/Black-Scholes-And_Friends/Linear_Black-Scholes-Merton.ipynb
@@ -715,7 +715,7 @@
    "id": "4ac5036c",
    "metadata": {},
    "source": [
-    "## Plotting all times"
+    "## Plotting all times (still editing)"
    ]
   },
   {
@@ -874,6 +874,14 @@
     "#     ax.set_ylim(-0.05,(Smax-strike_price)*(1+0.05))\n",
     "\n",
     "print(np.abs(sol1[-1] - f1[-1])/sol1[-1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c49670d3",
+   "metadata": {},
+   "source": [
+    "# UNFINISHED BELOW"
    ]
   },
   {
